deployment/backend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-todo
  namespace: practice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-todo
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: backend-todo
    spec:
      volumes:
      containers:
        - name: backend-todo
          image: ghcr.io/tfk70/app:1.0
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 128Mi
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
