deployment/backend/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: practice
  labels:
    app: postgres
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app: postgres
